--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ text-align: center;
 
 #menu li{
     display: inline;
-    margin:0 10px;
+    margin: 5px;
 }
 
 #menu li a{
@@ -58,6 +58,7 @@ text-align: center;
     padding:8px 16px;
     font-weight: bold;
     border-radius: 6px;
+    display: inline-block;
 }
 
 #menu li a:hover{
@@ -74,6 +75,7 @@ color:white;
 font-size:23px;
 padding:20px;
 grid-area:hero;
+align-content: center;
 }
 
 #hero h2{
@@ -117,7 +119,7 @@ padding:0 10px 10px 10px;
 
 #footer{
 background-color: black;
-
+color: white;
 text-align: center;
 grid-area:footer;
 padding:10px;
@@ -146,5 +148,16 @@ padding:10px;
 
     #hero h2 {
         font-size: 26px;
+    }
+
+    #menu li {
+        display: block;
+        margin: 10px 0;
+    }
+
+    #menu li a {
+        display: block;
+        width: 100%;
+        text-align: center;
     }
 }
